test/sema/typeck/class/index-set-wrong-item-type.out
error: Argument expects value of type `Float64` but got `Float32`.
--> index-set-wrong-item-type.dora:15:12
 | }
 | fn f(x: Foo, value: Float32) {
 |     x(0) = value;
              ~~~~~
 | }
 | 
1 error found.
